[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "psa"
version = "1.0"
dependencies = [
    "numpy",
    "matplotlib",
    "mplcursors",
    "mpld3",
    "scipy",
]

[tool.setuptools.packages]
find = { where = ["."] }

[[tool.setuptools-rust.ext-modules]]
target = "vectors._lib"
path = "vectors/Cargo.toml"

[[tool.setuptools-rust.ext-modules]]
target = "totalRotMatrix._lib"
path = "totalRotMatrix/Cargo.toml"