[package]
name = "totalRotMatrix"
version = "0.1.0"
edition = "2021"

[lib]
name = "_lib"
crate-type = ["cdylib"]

[[bin]]
name = "totalRotMatrix"
path = "src/bins/cli.rs"

[profile.release]
debug = true

[dependencies]
clap = { version = "4.5.2", features = ["derive"], optional = true }
ndarray = { version = "0.15.6", features = ["rayon"] }
numpy = { version = "0.20.0", optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.114", features = ["float_roundtrip"], optional = true }
pyo3 = { version = "0.20.3", features = ["extension-module"], optional = true }
rayon = { version = "1.9.0", optional = true }

[features]
default = ["python", "par"]
cli = ["clap", "ndarray/serde-1", "serde", "serde_json"]
python = ["pyo3", "numpy"]
par = ["rayon"]
